Arreglar listalibro: Metodo Add y Del problemas con recepcion string, esperado int.

--- a/src/BcBundle/Resources/views/Libreria/perfilLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/perfilLibreria.html.twig
@@ -7,21 +7,23 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="{{path("bc_add_libro")}}"><input type="button" value="Proponer libro" class="btn btn-warning"></a>
+                        <a href="{{path("bc_add_libro")}}">
+                            <img src="{{asset("imgdata/libro-add.png")}}" height="50" width="50">
+                            <input type="button" value="Proponer libro" class="btn btn-success"></a>
                     </div>
                     {% if app.user.rol != null %}
                         {% if app.user.rol == 'ADMIN' %}
                             <div class="col-md-3">
                                 <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}">
-                                    <i class="fas fa-pencil-alt" style="font-size: 170%"> Editar 
-                                    </i>
+                                    <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
+                                    <input type="button" value="Editar libro" class="btn btn-warning"></a>
                                 </a>
                             </div>
                             <br>
                             <div class="col-md-3">
                                 <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}">
-                                    <i class="fas fa-trash" style="font-size: 170%"> Eliminar
-                                    </i>
+                                    <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
+                                    <input type="button" value="Eliminar libro" class="btn btn-danger"></a>
                                 </a>
                             </div>
                         {% endif %}   
@@ -44,10 +46,14 @@
                                 <br><br>
                                 <div class="col-md-2"></div>
                                 <div class="col-md-3">
-                                    <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-pencil-alt" style="font-size: 250"></i></a>
+                                    <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}">
+                                        <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
+                                    </a>
                                 </div>
                                 <div class="col-md-3">
-                                    <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-trash" style="font-size: 250"></i></a>
+                                    <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}">
+                                        <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
+                                    </a>
                                 </div>
                             {% endif %} 
                         </h2>
