--- a/src/BcBundle/Resources/views/layout.html.twig
+++ b/src/BcBundle/Resources/views/layout.html.twig
@@ -29,7 +29,12 @@
         <body>
             <header class="bg-primary">
                 <div class="container text-center">
-                    <h2>BOOK CREW</h2>
+                    <h1>
+                        BOOK CREW<br>
+                        <img src="{{asset("imgdata/ICON-BC.png")}}" height="150" width="150">
+                        <br>
+                        <h5><i>¡Comienza tu travesía en la tripulación del conocimiento!</i></h5>
+                    </h1>
                 </div>
                 <nav class="navbar navbar-dark bg-primary">
                     {% if app.user != null %}
@@ -69,7 +74,7 @@
                     Contenido por defecto
                 {% endblock %}
             </section>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br>
             <footer class="bg-info text-center">
                 <br>
                 <h4><b>Autor:</b> Felipe Ruz Pérez - DAW 2017-2018</h4>
