--- a/src/BcBundle/Resources/views/Autor/indexAutor.html.twig
+++ b/src/BcBundle/Resources/views/Autor/indexAutor.html.twig
@@ -1,6 +1,5 @@
 {% extends "BcBundle::layout.html.twig" %}
 {% block content %}
-
     {% if app.user != null %} 
         {% if app.user.rol != null %}
             <br>
@@ -9,11 +8,15 @@
                 <div class="row">
                     {% if app.user.rol == 'ADMIN' %}
                         <div class="col-md-6">
-                            <a href="{{path("bc_add_autor")}}"><input type="button" value="Inscribir autor" class="btn btn-warning"></a>
+                            <a href="{{path("bc_add_autor")}}">
+                                <img src="{{asset("imgdata/user-add.png")}}" height="50" width="50">
+                                <input type="button" value="Inscribir autor" class="btn btn-success">
+                            </a>
                         </div>
                     {% endif %}
                     <div class="col-md-6">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                        <img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
                     </div>
                 </div>
                 <br>
@@ -23,7 +26,7 @@
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                        <h3><b>Búsqueda de autor</b></h3>
+                        <h3><b><img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">Búsqueda de autor</b></h3>
                     </div>
                     <div class="col-md-6">
                         <table style="width: 75%">
@@ -74,10 +77,15 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-3">
-                                            <a href="{{path("bc_edit_autor",{"id":autor.idAutor})}}"><i class="fas fa-pencil-alt" style="font-size: 250%"></i></a>
+                                            <a href="{{path("bc_edit_autor",{"id":autor.idAutor})}}">
+                                                <!--<i class="fas fa-pencil-alt" style="font-size: 250%"></i>-->
+                                                <img src="{{asset("imgdata/user-edit.png")}}" height="50" width="50">
+                                            </a>
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="{{path("bc_delete_autor",{"id":autor.idAutor})}}"><i class="fas fa-trash" style="font-size: 250%"></i></a>
+                                            <a href="{{path("bc_delete_autor",{"id":autor.idAutor})}}"><!--<i class="fas fa-trash" style="font-size: 250%"></i>-->
+                                                <img src="{{asset("imgdata/user-del.png")}}" height="50" width="50">
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
