--- a/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
@@ -8,11 +8,15 @@
                 <div class="row">
                     {% if app.user.rol == 'ADMIN' %}
                         <div class="col-md-6">
-                            <a href="{{path("bc_add_libreria")}}"><input type="button" value="Inscribir librería" class="btn btn-warning"></a>
+                            <a href="{{path("bc_add_libreria")}}">
+                                <img src="{{asset("imgdata/libreria-add.png")}}" height="50" width="50">
+                                <input type="button" value="Inscribir librería" class="btn btn-success">
+                            </a>
                         </div>
                     {% endif %}
                     <div class="col-md-6">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                        <img src="{{asset("imgdata/libreria-find.png")}}" height="50" width="50">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
                     </div>
                 </div>
                 <br>
@@ -22,7 +26,7 @@
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                        <h3><b>Búsqueda de libreria</b></h3>
+                        <h3><b><img src="{{asset("imgdata/libreria-find.png")}}" height="50" width="50">Búsqueda de libreria</b></h3>
                     </div>
                     <div class="col-md-6">
                         <table style="width: 75%">
