--- a/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
@@ -7,12 +7,16 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="{{path("bc_add_libro")}}"><input type="button" value="Proponer libro" class="btn btn-warning"></a>
+                        <a href="{{path("bc_add_libro")}}">
+                            <img src="{{asset("imgdata/libro-add.png")}}" height="50" width="50">
+                            <input type="button" value="Proponer libro" class="btn btn-success">
+                        </a>
                     </div>
                     <div class="col-md-6">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                        <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
                         {% if app.user.rol == 'ADMIN' %}
-                            <a href="{{path("bc_index_NoVallibro")}}">
+                            <a href="{{path("bc_index_NoVallibro")}}"> 
                                 <input type="button" value="Libros NO validados" class="btn btn-danger">
                             </a>
                         {% endif %} 
@@ -25,7 +29,7 @@
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                        <h3><b>Búsqueda de libro</b></h3>
+                        <h3><b><img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">Búsqueda de libro</b></h3>
                     </div>
                     <div class="col-md-6">
                         <table style="width: 75%">
@@ -60,7 +64,6 @@
             </div>
             <br>
             {% for libro in libros %}
-                <!--LIBROS VALIDADOS -->
                 {% if libro.validacion == 1 %}
                     <div class="container bg-warning">
                         <br>
@@ -82,19 +85,17 @@
                                         <div class="col-md-2"></div>
                                         <div class="col-md-3">
                                             <a href="{{path("bc_delete_libro",{"id":libro.idLibro})}}">
-                                                <i class="fas fa-trash" style="font-size: 250%">   
-                                                </i>
+                                                <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
                                             </a>
                                         </div>
                                         <div class="col-md-3">
                                             <a href="{{path("bc_edit_libro",{"id":libro.idLibro})}}">
-                                                <i class="fas fa-pencil-alt" style="font-size: 250%">
-                                                </i>
+                                                <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
                                             </a>
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="">
-                                                <i class="fas fa-plus" style="font-size: 250%"></i><b>Lista</b>
+                                            <a href="{{path("bc_add_listadolibros",{"idusuario":app.user.idUsuario,"idlibro":libro.idLibro})}}">
+                                                <i class="fas fa-plus" style="font-size: 260%"></i><b>MiLista</b>
                                             </a>
                                         </div>
                                     </div>
