--- a/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
@@ -3,14 +3,18 @@
     {% if app.user != null %} 
         {% if app.user.rol != null %}
             <br>
-            <div class="container bg-info">
+            <div class="container bg-dark">
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="{{path("bc_add_libro")}}"><input type="button" value="Proponer libro" class="btn btn-warning"></a>
+                        <a href="{{path("bc_add_libro")}}">
+                            <img src="{{asset("imgdata/libro-add.png")}}" height="50" width="50">
+                            <input type="button" value="Proponer libro" class="btn btn-success">
+                        </a>
                     </div>
                     <div class="col-md-6">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                        <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
                         {% if app.user.rol == 'ADMIN' %}
                             <a href="{{path("bc_index_libro")}}">
                                 <input id="BTVerValidados" type="button" value="Ver libros validados" class="btn btn-success">
@@ -25,7 +29,7 @@
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                        <h3><b>Búsqueda de libro</b></h3>
+                        <h3><b><img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">Búsqueda de libro</b></h3>
                     </div>
                     <div class="col-md-6">
                         <table style="width: 75%">
@@ -83,18 +87,20 @@
                                     <div class="col-md-2"></div>
                                     <div class="col-md-3">
                                         <a href="{{path("bc_delete_libro",{"id":libro.id_libro})}}">
-                                            <i class="fas fa-trash" style="font-size: 250%">   
-                                            </i>
+                                            <!--<i class="fas fa-trash" style="font-size: 250%">   
+                                            </i>-->
+                                            <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
                                         </a>
                                     </div>
                                     <div class="col-md-3">
                                         <a href="{{path("bc_edit_libro",{"id":libro.id_libro})}}">
-                                            <i class="fas fa-pencil-alt" style="font-size: 250%">
-                                            </i>
+                                           <!--<i class="fas fa-pencil-alt" style="font-size: 250%">
+                                            </i>-->
+                                           <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
                                         </a>
                                     </div>
                                     <div class="col-md-3">
-                                        <a href="{{path("bc_validar",{"id":libro.id_libro})}}"><i class="fa fa-check" style="font-size: 250%"></i></a>     
+                                        <a href="{{path("bc_validar",{"id":libro.id_libro})}}"><i class="fa fa-check" style="font-size: 260%"></i></a>     
                                     </div>
                                 </div>
                                 <br><br>
@@ -163,4 +169,15 @@
         </div>
     {% endif %}
 {% endblock %}
+{% block javascript %}
+    <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
+    <script>
+        $(document).ready(function () {
+            $("#controlBusqueda").toggle();
 
+            $("#act_busq").click(function () {
+                $("#controlBusqueda").toggle();
+            });
+        });
+    </script>
+{% endblock %}
