--- a/src/BcBundle/Resources/views/Listadolibro/indexListadolibro.html.twig
+++ b/src/BcBundle/Resources/views/Listadolibro/indexListadolibro.html.twig
@@ -23,13 +23,16 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h2>
-                                    <i class="fas fa-arrow-alt-circle-right"></i> {{listado.titulo}}
+                                    <i class="fas fa-arrow-alt-circle-right"></i><a href="{{path("bc_perfil_libro",{"id":listado.id_libro})}}"> {{listado.titulo}}</a>
                                 </h2>
                             </div>
                             <br>
                             <div class="col-md-6 text-center">
                                 <br>
-                                <a href=""><i class="fas fa-trash" style="font-size: 250%"></i></a>
+                                <a href="{{path("bc_add_listadolibros",{"idusuario":app.user.idUsuario,"idlibro":listado.id_libro})}}">
+                                    <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
+                                    <input type="button" value="Quitar de la lista" class="btn btn-danger">
+                                </a>
                             </div>
                         </div>
                         <br>
