--- a/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
@@ -3,11 +3,12 @@
     {% if app.user != null %} 
         {% if app.user.rol != null %}
             <br>
-            <div class="container bg-info">
+            <div class="container bg-dark">
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                        <img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
                     </div>
                 </div>
                 <br>
@@ -17,7 +18,7 @@
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                        <h3><b>Búsqueda de usuario</b></h3>
+                        <h3><b><img src="{{asset("imgdata/user-find.png")}}" height="50" width="50">Búsqueda de usuario</b></h3>
                     </div>
                     <div class="col-md-6">
                         <table style="width: 75%">
@@ -73,16 +74,21 @@
                             <table style="width:75%">
                                 <tr>
                                     <td>
-                                        <div class="col-md-3">
-                                            <a href="{{path("bc_del_usuario",{"id":usuario.id_usuario})}}">
-                                                <i class="fas fa-trash" style="font-size: 170%">   
-                                                </i>
-                                            </a>
-                                        </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-6">
                                             <a href="{{path("bc_edit_usuario",{"id":usuario.id_usuario})}}">
-                                                <i class="fas fa-pencil-alt" style="font-size: 170%">
-                                                </i>
+                                                <!--<i class="fas fa-pencil-alt" style="font-size: 170%">
+                                                </i>-->
+                                                <img src="{{asset("imgdata/user-edit.png")}}" height="50" width="50">
+                                                <input type="button" value="Editar usuario" class="btn btn-warning">
+                                            </a>
+
+                                        </div>
+                                        <div class="col-md-6">
+                                            <a href="{{path("bc_del_usuario",{"id":usuario.id_usuario})}}">
+                                                <!--<i class="fas fa-trash" style="font-size: 170%">   
+                                                </i>-->
+                                                <img src="{{asset("imgdata/user-del.png")}}" height="50" width="50">
+                                                <input type="button" value="Eliminar usuario" class="btn btn-danger"> 
                                             </a>
                                         </div>
                                         <br>
