--- a/src/BcBundle/Resources/views/Usuario/perfilUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/perfilUsuario.html.twig
@@ -27,6 +27,11 @@
                 <br>
             </div>
             <br>
+            <div id="busq_libro" class="container bg-info">
+                <br>      
+                <br>
+            </div>
+            <br>
             <div class="container bg-warning">
                 <br>
                 <h2>
