--- a/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
@@ -14,49 +14,12 @@
                             </a>
                         </div>
                     {% endif %}
-                    <div class="col-md-6">
-                        <img src="{{asset("imgdata/libreria-find.png")}}" height="50" width="50">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
-                    </div>
                 </div>
                 <br>
             </div>
             <br>
-            <div id="busq_libreria" class="container bg-info">
-                <br>
-                <div id="controlBusqueda" class="row">
-                    <div class="col-md-6">
-                        <h3><b><img src="{{asset("imgdata/libreria-find.png")}}" height="50" width="50">Búsqueda de libreria</b></h3>
-                    </div>
-                    <div class="col-md-6">
-                        <table style="width: 75%">
-                            <form accept-charset="utf-8" method="POST">
-                                <tr>
-                                    <td><b>Seleccione el parámetro de búsqueda : </b><br>
-                                        <select name="ParamBusq">
-                                            <option value="nada"></option>
-                                            <option value="NIF">NIF</option>
-                                            <option value="nombre">Nombre</option>
-                                            <option value="poblacion">Población</option>
-                                            <option value="provincia">Provincia</option>
-                                            <option value="fecha">Fecha</option>
-                                        </select>
-                                    </td>
-                                </tr>             
-                                <tr>
-                                    <td ><b>Texto de clave : </b><br>
-                                        <input type="text" id="parametroBusqueda" value="" placeholder="" maxlength="30" autocomplete="off" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <br><input id="activarBusqueda" type="button" value="Buscar.." class="btn btn-dark"><input id="cancelarBusqueda" type="button" value="Cancelar" class="btn btn-danger">
-                                    </td>
-                                </tr>
-                            </form>
-                        </table>
-                    </div>
-                </div>
+            <div class="container bg-info">
+                <br>      
                 <br>
             </div>
             <br>
@@ -75,10 +38,10 @@
                                     <br><br>
                                     <div class="col-md-2"></div>
                                     <div class="col-md-3">
-                                        <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-pencil-alt" style="font-size: 250"></i></a>
+                                        <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}"><img src="{{asset("imgdata/libreria-edit.png")}}" height="50" width="50"></a>
                                     </div>
                                     <div class="col-md-3">
-                                        <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-trash" style="font-size: 250"></i></a>
+                                        <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><img src="{{asset("imgdata/libreria-del.png")}}" height="50" width="50"></a>
                                     </div>
                                 {% endif %} 
                             </h2>
