--- a/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
@@ -14,7 +14,9 @@
                     </div>
                     <div class="col-md-6">
                         <img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">
-                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
+                        <a href="{{path("bc_find_libro")}}">
+                            <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-info">
+                        </a>
                         {% if app.user.rol == 'ADMIN' %}
                             <a href="{{path("bc_index_NoVallibro")}}"> 
                                 <input type="button" value="Libros NO validados" class="btn btn-danger">
@@ -26,120 +28,90 @@
             </div>
             <br>
             <div id="busq_libro" class="container bg-info">
-                <br>
-                <div id="controlBusqueda" class="row">
-                    <div class="col-md-6">
-                        <h3><b><img src="{{asset("imgdata/libro-find.png")}}" height="50" width="50">Búsqueda de libro</b></h3>
-                    </div>
-                    <div class="col-md-6">
-                        <table style="width: 75%">
-                            <form accept-charset="utf-8" method="POST">
-                                <tr>
-                                    <td><b>Seleccione el parámetro de búsqueda : </b><br>
-                                        <select name="ParamBusq">
-                                            <option value="nada"></option>
-                                            <option value="titulo">Libro</option>
-                                            <option value="autor">Autor</option>
-                                            <option value="categoria">Categoría</option>
-                                            <option value="libreria">Localización de su librería</option>
-                                            <option value="fecha">Fecha</option>
-                                        </select>
-                                    </td>
-                                </tr>             
-                                <tr>
-                                    <td ><b>Texto de clave : </b><br>
-                                        <input type="text" id="parametroBusqueda" value="" placeholder="" maxlength="30" autocomplete="off" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <br><input id="activarBusqueda" type="button" value="Buscar.." class="btn btn-dark"><input id="cancelarBusqueda" type="button" value="Cancelar" class="btn btn-danger">
-                                    </td>
-                                </tr>
-                            </form>
-                        </table>
-                    </div>
-                </div>
+                <br>      
                 <br>
             </div>
             <br>
-            {% for libro in libros %}
-                {% if libro.validacion == 1 %}
-                    <div class="container bg-warning">
-                        <br>
-                        <h2 id="titleLibro">
-                            <i class="fas fa-arrow-alt-circle-right"></i><b><a href="{{path("bc_perfil_libro",{"id":libro.idLibro})}}"> {{libro.titulo}}</a></b>
-                        </h2>
-                        <br>
-                        <div class="row">
-                            <div class="col-md-4 text-center">
-                                <br>
-                                {% if libro.portada == null or libro.portada == "" %}
-                                    <img src="{{asset("imgdata/smile.png")}}" height="230" width="200"> 
-                                {% else %}
-                                    <img src="{{asset(libro.portada)}}" height="230" width="200"> 
-                                {% endif %}
-                                {% if app.user.rol == 'ADMIN' %} 
+            <div id="vistaLibros">
+                {% for libro in libros %}
+                    {% if libro.validacion == 1 %}
+                        <div class="container bg-warning">
+                            <br>
+                            <h2 id="titleLibro">
+                                <i class="fas fa-arrow-alt-circle-right"></i><b><a href="{{path("bc_perfil_libro",{"id":libro.id_libro})}}"> {{libro.titulo}}</a></b>
+                            </h2>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-4 text-center">
+                                    <br>
+                                    {% if libro.portada == null or libro.portada == "" %}
+                                        <img src="{{asset("imgdata/smile.png")}}" height="230" width="200"> 
+                                    {% else %}
+                                        <img src="{{asset(libro.portada)}}" height="230" width="200"> 
+                                    {% endif %}
+                                    {% if app.user.rol == 'ADMIN' %} 
+                                        <br><br>
+                                        <div class="row">
+                                            <div class="col-md-2"></div>
+                                            <div class="col-md-3">
+                                                <a href="{{path("bc_delete_libro",{"id":libro.id_libro})}}">
+                                                    <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
+                                                </a>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <a href="{{path("bc_edit_libro",{"id":libro.id_libro})}}">
+                                                    <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
+                                                </a>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <a href="{{path("bc_add_listadolibros",{"idusuario":app.user.idUsuario,"idlibro":libro.id_libro})}}">
+                                                    <i class="fas fa-plus" style="font-size: 260%"></i><b>MiLista</b>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <br><br>
+                                    {% endif %}
+                                </div>
+                                <div class="col-md-8">
                                     <br><br>
-                                    <div class="row">
-                                        <div class="col-md-2"></div>
-                                        <div class="col-md-3">
-                                            <a href="{{path("bc_delete_libro",{"id":libro.idLibro})}}">
-                                                <img src="{{asset("imgdata/libro-del.png")}}" height="50" width="50">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <a href="{{path("bc_edit_libro",{"id":libro.idLibro})}}">
-                                                <img src="{{asset("imgdata/libro-edit.png")}}" height="50" width="50">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <a href="{{path("bc_add_listadolibros",{"idusuario":app.user.idUsuario,"idlibro":libro.idLibro})}}">
-                                                <i class="fas fa-plus" style="font-size: 260%"></i><b>MiLista</b>
-                                            </a>
-                                        </div>
+                                    <h4><b>Por "</b><i>{{libro.autor_nom}} {{libro.apellido}}</i><b>"</b> </h4>
+                                    <table class="bg-success" style="width: 75%">
+                                        <tr>
+                                            <td>
+                                                <b>Publicado el </b> {{libro.fech_public|date('d-m-Y')}}
+                                            </td>
+                                            <td>
+                                                {% if libro.formato == 0 %}
+                                                    <b> Formato : </b> Físico 
+                                                {% elseif libro.formato == 1 %}
+                                                    <b> Formato : </b> Digital
+                                                {% else %}
+                                                    <b> Formato :</b> Digital y físico.
+                                                {% endif %}
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <b>Categoría : "{{libro.nombre}}"</b>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <br>
+                                    <b>Disponible en : </b>
+                                    <div id="list_tiendas">
+                                        <ul>
+                                            <li><a href="{{path("bc_index_stocks",{"id":libro.id_libro})}}"><i class="fas fa-eye"></i><b> Ver librerías..</b></a></li>
+                                            <br><br>
+                                        </ul>
                                     </div>
                                     <br><br>
-                                {% endif %}
-                            </div>
-                            <div class="col-md-8">
-                                <br><br>
-                                <h4><b>Por "</b><i>{{libro.autor}}</i><b>"</b> </h4>
-                                <table class="bg-success" style="width: 75%">
-                                    <tr>
-                                        <td>
-                                            <b>Publicado el </b> {{libro.fechpublic|date('d-m-Y')}}
-                                        </td>
-                                        <td>
-                                            {% if libro.formato == 0 %}
-                                                <b> Formato : </b> Físico 
-                                            {% elseif libro.formato == 1 %}
-                                                <b> Formato : </b> Digital
-                                            {% else %}
-                                                <b> Formato :</b> Digital y físico.
-                                            {% endif %}
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <b>Categoría : "{{libro.categoria}}"</b>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <br>
-                                <b>Disponible en : </b>
-                                <div id="list_tiendas">
-                                    <ul>
-                                        <li><a href="{{path("bc_index_stocks",{"id":libro.idLibro})}}"><i class="fas fa-eye"></i><b> Ver librerías..</b></a></li>
-                                        <br><br>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <br><br> 
-                {% endif %}
-            {% endfor %}
+                        <br><br> 
+                    {% endif %}
+                {% endfor %}
+            </div> <!--Cierre vistaLibros -->
         {% else %}
             <div class="container bg-danger">
                 <div class="row">
@@ -175,6 +147,10 @@
             $("#controlBusqueda").toggle();
 
             $("#act_busq").click(function () {
+                $("#controlBusqueda").toggle();
+            });
+
+            $("#cancelarBusqueda").click(function () {
                 $("#controlBusqueda").toggle();
             });
         });
